--- a/fresh2.html
+++ b/fresh2.html
@@ -14,7 +14,7 @@
     cannot bethefirst or last clause. A where clause may appear either before or after a group clause depending on
     whether you haveto filter thesourceelements before or after they are grouped.
     If a specified predicateis notvalid for theelements in the data source,a compile-timeerror will result.This is one
-    benefit of thestrong type-checking provided by LINQ.
+    health of thestrong type-checking provided by LINQ.
     
     </div>
 
