bhai dekhlena page12

--- a/fresh7.html
+++ b/fresh7.html
@@ -37,10 +37,14 @@
     width: 250px;
     height: 150px;
 background: tomato;
+border: 10px solid black;
 margin: 150px 300px;
 transform:rotate(5deg);
 transition: transform 1s;
-
+border-image-source:url(images/border-image-2.jpg) ;
+    border-image-slice: 50 20;
+    border-image-repeat: round;
+    border-image-outset: 10px;
 
 }
 #box2:hover{
