--- a/fresh9.html
+++ b/fresh9.html
@@ -28,6 +28,10 @@ animation-iteration-count: infinite;
 animation-direction: alternate;
 
 }
+.base:hover{
+    animation-play-state: paused;
+}
+
 @keyframes sample{
 from{border-radius: 0%;}
 75%{background-color: greenyellow; color: blueviolet;}
