--- a/fresh.html
+++ b/fresh.html
@@ -25,6 +25,8 @@ img{
     min-width: 0%;
     max-width: 100%;
     height:50%;
+    object-fit: cover;
+    object-position: bottom;
 }
 
     #texts{
@@ -44,7 +46,7 @@ img{
         <h2>hello</h2>
         
     <div id="text">
-<img src = "images/pic.jpg"/>
+<img src = "images/d4.jpg"/>
 
         gjgckhjk.jhlhffjxjfckhb.jkjhgxfhfkhvlhjvhjcdfhzhfkhgvkhgcgzdfzhfhjgl
            hfjfghdxhgvhjvgfxdfxjffkhgcgcgchdfxjfckghgkhxfhhdfxkgkhcgvnvxhdfxhfxggggggggfdjghgktfjghmghcghdjcghvghcgfnxfxgfcnchgfxfgcnghchgfxfgxgcghcgfcgfchgcfj
